# roadmap

./: README.md  main.py  pyproject.toml  requirements.txt
models/: achievable.py  actionables.py  category.py  dates.py  objective.py  roadmap.py
tests/: test_category.py  test_goal.py  test_objective.py  test_phase.py  test_roadmap.py  test_task.py  test_timeframe.py
ui/: gui.py  roadmap.py
